--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uploadcare/upload-client": "^6.14.1",
     "downloadjs": "^1.4.7",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
